--- a/package.json
+++ b/package.json
@@ -1,74 +1,70 @@
 {
-  "name": "fox",
+  "name": "foxmulder",
   "version": "2.5.0",
   "main": "server.js",
   "scripts": {
+    "clean": "rimraf dist",
     "test": "mocha --opts mocha.opts",
-    "test-ci": "nyc --reporter=text-summary --reporter=html mocha --opts mocha.opts --reporter mocha-junit-reporter",
-    "lint": "prettier --single-quote --trailing-comma none --use-tabs --tab-width 4 \"{server,{server,web,tests}/**/*}.+(js|json|scss)\" --write",
-    "build": "grunt build",
-    "start": "grunt serve"
+    "test-ci": "mocha --opts mocha.opts --reporter mocha-junit-reporter **/*.spec.js",
+    "coverage": "nyc --reporter=text-summary --reporter=html npm run test",
+    "lint": "prettier --single-quote --trailing-comma none --use-tabs --tab-width 4 \"{webpack.config,{server,web,tests}/**/*}.+(js|json|scss)\" --write",
+    "build": "cross-env NODE_ENV=production webpack --display-exclude --display-optimization-bailout --colors",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --colors"
   },
   "license": "MIT",
   "engines": {
-    "node": ">6.9.2"
+    "node": ">6.0.0"
   },
   "dependencies": {
-    "aws-sdk": "2.5.4",
+    "@uirouter/angularjs": "1.0.3",
+    "angular": "1.6.6",
+    "angular-socket-io": "0.7.0",
+    "aws-sdk": "2.100.0",
+    "dygraphs": "1.1.1",
     "eureka-js-client": "4.3.0",
     "gauss": "0.2.12",
     "lokijs": "1.5.0",
     "mkdirp": "0.5.1",
-    "moment": "2.14.1",
-    "mysql": "2.5.4",
+    "moment": "2.18.1",
+    "mysql": "2.14.1",
+    "ng-dialog": "1.4.0",
     "nodemailer": "2.6.4",
-    "nodemailer-ses-transport": "1.5.0",
-    "proxy-agent": "2.0.0",
+    "nodemailer-ses-transport": "1.5.1",
+    "proxy-agent": "2.1.0",
     "request-promise": "3.0.0",
     "restify": "4.1.1",
     "socket.io": "1.4.8",
-    "winston": "2.2.0"
+    "winston": "2.3.1"
   },
   "devDependencies": {
-    "angular": "1.5.8",
-    "angular-socket-io": "0.7.0",
-    "angular-ui-router": "0.3.1",
-    "babel-preset-es2015": "6.13.2",
-    "babelify": "7.3.0",
-    "dygraphs": "1.1.1",
-    "eslint": "3.10.2",
-    "grunt": "1.0.1",
-    "grunt-browserify": "5.0.0",
-    "grunt-cli": "1.2.0",
-    "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-connect": "1.0.2",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
-    "grunt-contrib-uglify": "2.0.0",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-develop": "0.4.0",
-    "grunt-sass": "1.2.1",
-    "load-grunt-configs": "1.0.0",
-    "load-grunt-tasks": "3.5.2",
-    "mocha": "3.4.2",
-    "mocha-junit-reporter": "1.12.0",
-    "ng-dialog": "0.6.4",
+    "autoprefixer": "7.1.2",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.6.0",
+    "cross-env": "5.0.5",
+    "css-loader": "0.28.5",
+    "css-mqpacker": "6.0.1",
+    "cssnano": "3.10.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "html-loader": "0.5.1",
+    "html-webpack-plugin": "2.30.1",
+    "json-loader": "0.5.7",
+    "mocha": "3.5.0",
+    "mocha-junit-reporter": "1.13.0",
+    "ng-annotate-webpack-plugin": "0.2.1-pre",
     "node-bourbon": "4.2.8",
     "node-neat": "1.7.2",
-    "nyc": "11.0.3",
+    "node-sass": "4.5.3",
+    "nyc": "11.1.0",
+    "postcss-loader": "2.0.6",
+    "preload-webpack-plugin": "1.2.3",
     "prettier": "1.5.3",
-    "time-grunt": "1.4.0"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
+    "pug-html-loader": "1.1.5",
+    "resource-hints-webpack-plugin": "0.0.1",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "webpack": "3.5.5",
+    "webpack-dev-server": "2.7.1"
   }
 }
